Fix sizing on mobile

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -2,3 +2,7 @@
   font-size: 2.5em;
 }
 
+.social-link {
+  font-size: 0.75em;
+}
+
